--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="jemdoc, see http://jemdoc.jaboc.net/">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>lvpei</title>
-  <link rel="stylesheet" href="ciisrStyles/base.css">
-  <link rel="stylesheet" href="ciisrStyles/peopleDetail.css">
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="peopleDetail.css">
 </head>
 <body>
   <div id="layout-content">
@@ -66,6 +66,6 @@
     </div>
   </div>
   <script src="vuejs/vue.js"></script>
-  <script src="vuejs/lvp.js"></script>
+  <script src="lvp.js"></script>
 </body>
 </html>
