--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="jemdoc, see http://jemdoc.jaboc.net/">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>lvpei</title>
-  <link rel="stylesheet" href="ciisrStyles/base.css">
-  <link rel="stylesheet" href="ciisrStyles/peopleDetail.css">
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="peopleDetail.css">
 </head>
 <body>
   <div id="layout-content">
